fix overflowing issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -301,7 +301,7 @@ footer h2 {
 @media screen and (min-width: 30rem) {
 
     #header-content {
-        padding: 1em;
+        padding: 1em 0;
     }
 
     .nav-list {
@@ -346,6 +346,18 @@ footer h2 {
     
     #background, #skills, #projects, #hire-me {
         padding: 2em 0em;
+    }
+}
+
+@media screen and (min-width: 60rem) {
+
+    .container {
+        width: 75%;
+    }
+
+    #intro {
+        flex-flow: row;
+        min-height: 50vh;
     }
 }
 
